mi primera confirmación de actualización

--- a/sobre-pazu.html
+++ b/sobre-pazu.html
@@ -23,6 +23,7 @@
     <!--FIN DE BARRA-->
     <!--CONTENIDO PRINCIPAL-->
     <main>
+      <div class="greeting">HOLA QUE ONDA</div>
       <div class="container">
         <h1>Sobre Pazu</h1>
         <p>Aquí encontrarás más información sobre Pazu</p>
